infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  # How many copies of the pod to run
  replicas: 1
  # Select the pod with the label "app: client"
  selector:
    matchLabels:
      app: client
  # Tells kubernetes to create a pod with label "app: client"
  # which is used in the sector section to ideitify the correct pod
  template:
    metadata:
      labels:
        app: client
    # Configure the pod
    spec:
      containers:
        - name: client
          image: therealdarkdev/client:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  # Tell service to direct incoming traffic to
  # the pod with label "app: client"
  selector:
    app: client
  type: ClusterIP # default is type of ClusterIP anyways
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
