infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  # How many copies of the pod to run
  replicas: 1
  # Select the pod with the label "app: event-bus"
  selector:
    matchLabels:
      app: event-bus
  # Tells kubernetes to create a pod with label "app: event-bus"
  # which is used in the sector section to ideitify the correct pod
  template:
    metadata:
      labels:
        app: event-bus
    # Configure the pod
    spec:
      containers:
        - name: event-bus
          image: therealdarkdev/event-bus:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  # Tell service to direct incoming traffic to
  # the pod with label "app: event-bus"
  selector:
    app: event-bus
  type: ClusterIP # default is type of ClusterIP anyways
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
