infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  # How many copies of the pod to run
  replicas: 1
  # Select the pod with the label "app: query"
  selector:
    matchLabels:
      app: query
  # Tells kubernetes to create a pod with label "app: query"
  # which is used in the sector section to ideitify the correct pod
  template:
    metadata:
      labels:
        app: query
    # Configure the pod
    spec:
      containers:
        - name: query
          image: therealdarkdev/query:latest
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  # Tell service to direct incoming traffic to
  # the pod with label "app: query"
  selector:
    app: query
  type: ClusterIP # default is type of ClusterIP anyways
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
