infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  # Tells ingress that this is a routing rule
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 4000
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          - path: /posts/?(.*)/comments
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 4001
          # REACT APP => MUST BE AT THE END OF THIS FILE
          # - path: / # If NOT using react-router-dom, just "/" would be ok, but not recommended
          - path: /?(.*) # If using react-router-dom, use this path instead
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
